src/org/boc/rule/format/ELParser.java
/* Generated By:JavaCC: Do not edit this line. ELParser.java */
package org.boc.rule.format;

import org.boc.rule.*;

import java.util.*;
import java.io.*;
/**
 * Generated EL parser.
 * 
 * @author Nathan Abramson
 * @author Shawn Bayern
 */

public class ELParser implements ELParserConstants {
  ExpressionFormatter formatter = new ExpressionFormatter();
  boolean isFunction = false;
  boolean isPrefix = false;

  public void setFormatter(ExpressionFormatter formatter)
  {
    this.formatter = formatter;
  }
  public static void main(String args[])
       throws ParseException
  {
    ELParser parser = new ELParser (System.in);
    parser.formatter.start();
    parser.Expressions ();
    parser.formatter.finish();
  }
  public void processSpecial(Token t)
  {
    if (t.specialToken == null) return;
    // The above statement determines that there are no special tokens
    // and returns control to the caller.
    Token tmp_t = t.specialToken;
    while (tmp_t.specialToken != null) tmp_t = tmp_t.specialToken;
    // The above line walks back the special token chain until it
    // reaches the first special token after the previous regular
    // token.
    while (tmp_t != null) {
      if ( "\n".equals(tmp_t.image) ) {
        this.formatter.newline(tmp_t.image);
      }
      else
        this.formatter.space(tmp_t.image);
      tmp_t = tmp_t.next;
    }
    // The above loop now walks the special token chain in the forward
    // direction printing them in the proce
  }

/*****************************************
 * GRAMMAR PRODUCTIONS *
 *****************************************/
  final public void Statement() throws ParseException {
    if (jj_2_1(2)) {
      ExpressionStatement();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATEMENT_START:
        CompoundStatement();
        break;
      case IF1:
      case IF2:
      case IF3:
        IfThenElseExpression();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

  }

  final public void Expressions() throws ParseException {
    label_1:
    while (true) {
      Statement();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case STRING_LITERAL:
      case TRUE1:
      case TRUE2:
      case FALSE1:
      case FALSE2:
      case NULL:
      case LPAREN1:
      case LPAREN2:
      case SEMI1:
      case SEMI2:
      case MINUS1:
      case MINUS2:
      case MINUS3:
      case MINUS4:
      case NOT1:
      case NOT2:
      case NOT3:
      case EMPTY:
      case IF1:
      case IF2:
      case IF3:
      case STATEMENT_START:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }

  }

  final public void CompoundStatement() throws ParseException {
  Token t;
    t = jj_consume_token(STATEMENT_START);
      processSpecial(t); formatter.keyword(t.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
    case TRUE1:
    case TRUE2:
    case FALSE1:
    case FALSE2:
    case NULL:
    case LPAREN1:
    case LPAREN2:
    case SEMI1:
    case SEMI2:
    case MINUS1:
    case MINUS2:
    case MINUS3:
    case MINUS4:
    case NOT1:
    case NOT2:
    case NOT3:
    case EMPTY:
    case IF1:
    case IF2:
    case IF3:
    case STATEMENT_START:
    case IDENTIFIER:
      Expressions();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    t = jj_consume_token(STATEMENT_END);
      processSpecial(t); formatter.keyword(t.image);

  }

  final public void ExpressionStatement() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case STRING_LITERAL:
    case TRUE1:
    case TRUE2:
    case FALSE1:
    case FALSE2:
    case NULL:
    case LPAREN1:
    case LPAREN2:
    case MINUS1:
    case MINUS2:
    case MINUS3:
    case MINUS4:
    case NOT1:
    case NOT2:
    case NOT3:
    case EMPTY:
    case IDENTIFIER:
      ExpressionSet();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI1:
      t = jj_consume_token(SEMI1);
      break;
    case SEMI2:
      t = jj_consume_token(SEMI2);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      processSpecial(t); formatter.keyword(t.image);

  }

  final public void ExpressionSet() throws ParseException {
  Token t;
    Expression();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA1:
      case COMMA2:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA1:
        t = jj_consume_token(COMMA1);
        break;
      case COMMA2:
        t = jj_consume_token(COMMA2);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          processSpecial(t); formatter.keyword(t.image);
      Expression();
    }

  }

  final public void SpecialEqualExpression() throws ParseException {
  Token t;
    NamedValue();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADDEQ1:
    case ADDEQ2:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADDEQ1:
        t = jj_consume_token(ADDEQ1);
        break;
      case ADDEQ2:
        t = jj_consume_token(ADDEQ2);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        processSpecial(t); formatter.keyword(t.image);
      break;
    case MINUSEQ1:
    case MINUSEQ2:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUSEQ1:
        t = jj_consume_token(MINUSEQ1);
        break;
      case MINUSEQ2:
        t = jj_consume_token(MINUSEQ2);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        processSpecial(t); formatter.keyword(t.image);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expression();

  }

  final public void IfThenElseExpression() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF1:
      t = jj_consume_token(IF1);
      break;
    case IF2:
      t = jj_consume_token(IF2);
      break;
    case IF3:
      t = jj_consume_token(IF3);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      processSpecial(t); formatter.keyword(t.image);
    OrExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case THEN1:
      t = jj_consume_token(THEN1);
      break;
    case THEN2:
      t = jj_consume_token(THEN2);
      break;
    case THEN3:
      t = jj_consume_token(THEN3);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      processSpecial(t); formatter.keyword(t.image);
    Statement();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE1:
    case ELSE2:
    case ELSE3:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE1:
        t = jj_consume_token(ELSE1);
        break;
      case ELSE2:
        t = jj_consume_token(ELSE2);
        break;
      case ELSE3:
        t = jj_consume_token(ELSE3);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        processSpecial(t); formatter.keyword(t.image);
      Statement();
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }

  }

  final public void LetExpression() throws ParseException {
   Token t;
    NamedValue();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL1:
      t = jj_consume_token(EQUAL1);
      break;
    case EQUAL2:
      t = jj_consume_token(EQUAL2);
      break;
    case EQUAL3:
      t = jj_consume_token(EQUAL3);
      break;
    case EQUAL4:
      t = jj_consume_token(EQUAL4);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      processSpecial(t); formatter.keyword(t.image);
    Expression();

  }

  final public void Expression() throws ParseException {
  Token t;
    if (jj_2_2(2147483647)) {
      ConditionalExpression();
    } else if (jj_2_3(2147483647)) {
      LetExpression();
    } else if (jj_2_4(2147483647)) {
      SpecialEqualExpression();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
      case FLOATING_POINT_LITERAL:
      case STRING_LITERAL:
      case TRUE1:
      case TRUE2:
      case FALSE1:
      case FALSE2:
      case NULL:
      case LPAREN1:
      case LPAREN2:
      case MINUS1:
      case MINUS2:
      case MINUS3:
      case MINUS4:
      case NOT1:
      case NOT2:
      case NOT3:
      case EMPTY:
      case IDENTIFIER:
        OrExpression();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }

  }

  final public void OrExpression() throws ParseException {
  Token t;
    AndExpression();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR1:
      case OR2:
      case OR3:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR1:
        t = jj_consume_token(OR1);
        break;
      case OR2:
        t = jj_consume_token(OR2);
        break;
      case OR3:
        t = jj_consume_token(OR3);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        processSpecial(t); formatter.keyword(t.image);
      AndExpression();
    }

  }

  final public void AndExpression() throws ParseException {
  Token t;
    EqualityExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND1:
      case AND2:
      case AND3:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND1:
        t = jj_consume_token(AND1);
        break;
      case AND2:
        t = jj_consume_token(AND2);
        break;
      case AND3:
        t = jj_consume_token(AND3);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        processSpecial(t); formatter.keyword(t.image);
      EqualityExpression();
    }

  }

  final public void EqualityExpression() throws ParseException {
  Token t;
    RelationalExpression();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ1:
      case EQ2:
      case EQ3:
      case NE1:
      case NE2:
      case NE3:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ1:
      case EQ2:
      case EQ3:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQ1:
          t = jj_consume_token(EQ1);
          break;
        case EQ2:
          t = jj_consume_token(EQ2);
          break;
        case EQ3:
          t = jj_consume_token(EQ3);
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        processSpecial(t); formatter.keyword(t.image);
        break;
      case NE1:
      case NE2:
      case NE3:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NE1:
          t = jj_consume_token(NE1);
          break;
        case NE2:
          t = jj_consume_token(NE2);
          break;
        case NE3:
          t = jj_consume_token(NE3);
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        processSpecial(t); formatter.keyword(t.image);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      RelationalExpression();
    }

  }

  final public void RelationalExpression() throws ParseException {
  Token t;
    AddExpression();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT1:
      case GT2:
      case GT3:
      case GT4:
      case LT1:
      case LT2:
      case LT3:
      case LT4:
      case LE1:
      case LE2:
      case LE3:
      case LE4:
      case GE1:
      case GE2:
      case GE3:
      case GE4:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LT1:
      case LT2:
      case LT3:
      case LT4:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LT1:
          t = jj_consume_token(LT1);
          break;
        case LT2:
          t = jj_consume_token(LT2);
          break;
        case LT3:
          t = jj_consume_token(LT3);
          break;
        case LT4:
          t = jj_consume_token(LT4);
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        processSpecial(t); formatter.keyword(t.image);
        break;
      case GT1:
      case GT2:
      case GT3:
      case GT4:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GT1:
          t = jj_consume_token(GT1);
          break;
        case GT2:
          t = jj_consume_token(GT2);
          break;
        case GT3:
          t = jj_consume_token(GT3);
          break;
        case GT4:
          t = jj_consume_token(GT4);
          break;
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        processSpecial(t); formatter.keyword(t.image);
        break;
      case GE1:
      case GE2:
      case GE3:
      case GE4:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GE1:
          t = jj_consume_token(GE1);
          break;
        case GE2:
          t = jj_consume_token(GE2);
          break;
        case GE3:
          t = jj_consume_token(GE3);
          break;
        case GE4:
          t = jj_consume_token(GE4);
          break;
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        processSpecial(t); formatter.keyword(t.image);
        break;
      case LE1:
      case LE2:
      case LE3:
      case LE4:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LE1:
          t = jj_consume_token(LE1);
          break;
        case LE2:
          t = jj_consume_token(LE2);
          break;
        case LE3:
          t = jj_consume_token(LE3);
          break;
        case LE4:
          t = jj_consume_token(LE4);
          break;
        default:
          jj_la1[28] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        processSpecial(t); formatter.keyword(t.image);
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      AddExpression();
    }

  }
